# esp-idf-sys-issue-235

./: Cargo.toml  build.rs  partitions.csv  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
