[package]
name = "esp-idf-sys-issue-235"
version = "0.1.0"
authors = ["Xabier Crespo Álvarez <xabicrespog@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "=0.33.2", features = ["binstart"] }

[build-dependencies]
embuild = "0.31.2"
